software/components/redis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    hostk8s.component: redis
    component.hostk8s.io/type: foundation
    component.hostk8s.io/category: database
